clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/demo.fastgateway.dev/demo-fastgateway-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-fastgateway-dev-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "demo.fastgateway.dev"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - "demo.fastgateway.dev"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      minProtocolVersion: TLSV1_3
      credentialName: demo-fastgateway-dev-cert
      mode: SIMPLE
