clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/demo.fastgateway.dev/demo-fastgateway-dev-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: demo-fastgateway-dev-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        - demo.fastgateway.dev
